[gd_scene load_steps=2 format=3 uid="uid://dvdy2n5irl835"]

[ext_resource type="Script" uid="uid://bqn6pd306mb6r" path="res://scripts/ui/level_up_panel.gd" id="1_fclbr"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_fclbr")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5019608)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -50.5
offset_right = 37.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="UpgradeOption1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "+20% Move Speed"

[node name="UpgradeOption2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "+10 Max HP"

[node name="UpgradeOption3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "+10% Weapon Damage"
